# nanobot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Shuttle.toml  docker-compose.yaml  interaction_flow.excalidraw  sqlx.toml.example
.shuttle/: config.toml
.sqlx/: query-00f839a86be2867afbb09fbbd0b940914bc63425c15ea3d156b437944d0e2247.json  query-0219e703cf718bbe82dd058a234bb074aff4b6518f18e28b8a1f8838dc504d35.json  query-185b353a2ab187c7b7a8cabaf541e9acee3760250e1ab807e241f17ad253cae9.json  query-1f1b8289dc5079b3b4516f69436d403400bd6d70a26e2a73e2f60999c45b09d9.json  query-28fe06c30507a267b49aebbfe22a696d25110d813de6f3a3a73c359ee1da013c.json  query-29e5c3aa576e804e9aeb29f707eda28a70ba3c6c630b29451e7030842591fc5b.json  query-2a25f494fc244e877e4ade7b1d0c422cbea9263d74bae688d5dc9684bc855d4d.json  query-2ff8714555dfbbd54d0714eacc97cbd8c38bad944287be73548883d1e2f42723.json  query-3b5f8a3a55705a61f79428359d4cff67aa9e7dea25c3d4f381e38151b8f078fe.json  query-452905f611b1e2ab2f5211021a792f9c246ccd4176f3445252288a5a301a99a7.json  query-46164355ac6198238b49399cb6f3ec4b65165a76010969af49e44e0d41b8aca6.json  query-47b151a290d22d28f0a94d133fa9d3f49e4b2e84b963c39d7c7ec11747686b2e.json  query-506b557edcffc8d10ed6f39dfde3908bfea14fc36d055311577308e54e953bee.json  query-5103448285fcc839f2fd049496e0a627e444361a3d0967f5ef8a4d33d57fa1da.json  query-514d244ce160e919502188e7f35e3c6b7043b9d8f5a2f181170ea2da17e4dfc9.json  query-531a8e0382020c55a09cc57719cbe83919a903d62fb26e6e8619893c709faa2e.json  query-560961426f3fb5eb6a020f7d4dff7015fdbe80647bb9d17ef71e7846177fd698.json  query-56f54bfdc63d7c09add2bb4dec1e6a4544a684611755bcf2fa9424702ecd11cf.json  query-633c1689a307166ef14a50ba73f39e84b3ef7d85354935afb518a5e27725faf3.json  query-67652562ba289eb253e4986fbcf830b0c18da166eca63aaa758d3c896b3e5466.json  query-7265c99235c9deff752d1a21aa38f8b33148b3e252924370a66e799b2aa4b23b.json  query-74519af03ec8e4d280501ec5325e08e3d4d671563c1546f3f63038601fe5142d.json  query-78ef4944c36a5121b4041c51a369f99c6848ace8177e5f6fa2c921fd8df50c80.json  query-7d460b23ef1ba963ed61247055fbb6588137401fb88cb7bf02aca73f89134d94.json  query-7d83a166b3c672b6f8b7de4655b49b63c30d9b9217330dab776c0b10b766b9c2.json  query-7fdb5e74d26ac02fb8a027e542fcf7d24ade076f939ebaefbb502a802ef68e01.json  query-87c9aed68f10d778eea00d0c9e46f98bd31fd2cf78f8bd36002a81e3ed7295a0.json  query-87fdce1d94c71a23196d11d87fbc748cb4c9ef59333f546da68b52322bd104c2.json  query-8ccd348dc2d95d9e5f0997cfe9aac6965b351fe8668eb00423f86c957e81fa70.json  query-9a3fe852e141be35b521fb790e54e3c690fbf9a76ce4840ec479d19597bc41fe.json  query-a47209085843dc7f53757d6d85566ff613de2bf6f734af92107f0a63ca1fa587.json  query-b2eb28ae45dbd52f32c437b6f8a99d993c838afa170e67df23e4413bcc27ce92.json  (+13 more)
(+27 files in other folders)
