[package]
name = "nano"
version = "0.1.0"
edition = "2021"
description = "Discord bot to authenticate and de-anonymise users"
homepage = "https://github.com/supleed2/nanobot"
repository = "https://github.com/supleed2/nanobot"
license = "ISC"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
indoc = "2.0.6"
poise = "0.6.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
shuttle-runtime = { version = "0.56.0", default-features = false }
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.6", features = [
	"macros",
	"postgres",
	"runtime-tokio-native-tls",
] }
tokio = "1.46.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
url = "2.5.4"
