[package]
name = "nano"
version = "0.1.0"
edition = "2021"
description = "Discord bot to authenticate and de-anonymise users"
homepage = "https://github.com/supleed2/nanobot"
repository = "https://github.com/supleed2/nanobot"
license = "ISC"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
dotenvy = "0.15.7"
indoc = "2.0.7"
poise = "0.6.1"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
	"macros",
	"postgres",
	"runtime-tokio-native-tls",
] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time"] }
url = "2.5.7"
